--- a/trunk/gwt-charts/pom.xml
+++ b/trunk/gwt-charts/pom.xml
@@ -1,23 +1,33 @@
-<!-- 
- * Copyright 2012 Rui Afonso
- * 
- * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
- * the License. You may obtain a copy of the License at
- * 
- * http://www.apache.org/licenses/LICENSE-2.0
- * 
- * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
- * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
- * specific language governing permissions and limitations under the License.
- -->
- <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<!-- * Copyright 2012 Rui Afonso * * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this 
+	file except in compliance with * the License. You may obtain a copy of the License at * * http://www.apache.org/licenses/LICENSE-2.0 
+	* * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on * 
+	an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the * specific 
+	language governing permissions and limitations under the License. -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.google.code.gwt.charts</groupId>
 	<artifactId>gwt-charts</artifactId>
 	<version>0.9.0</version>
-	<name>Google Chart Tools for GWT</name>
-
+	<packaging>jar</packaging>
+	
+	<name>GWT Charts</name>
+	<description>Unofficial Google Chart Tools API for Google Web Toolkit</description>
+	<url>http://code.google.com/p/gwt-charts</url>
+	
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	
+	<scm>
+		<url>http://gwt-charts.googlecode.com/svn/trunk/</url>
+		<connection>scm:svn:http://gwt-charts.googlecode.com/svn/trunk/</connection>
+	</scm>
+	
 	<dependencies>
 		<dependency>
 			<groupId>com.google.gwt</groupId>
@@ -61,7 +71,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		
+
 		<pluginManagement>
 			<plugins>
 				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
@@ -102,4 +112,9 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+	<inceptionYear>2012</inceptionYear>
+	<issueManagement>
+		<url>http://code.google.com/p/gwt-charts/issues</url>
+		<system>Google Code</system>
+	</issueManagement>
 </project>
