--- a/gwt-charts/pom.xml
+++ b/gwt-charts/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.googlecode.gwt-charts</groupId>
 	<artifactId>gwt-charts</artifactId>
-	<version>0.9.8</version>
+	<version>0.9.8-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>GWT Charts</name>
