--- a/gwt-charts/pom.xml
+++ b/gwt-charts/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.googlecode.gwt-charts</groupId>
 	<artifactId>gwt-charts</artifactId>
-	<version>0.9.9</version>
+	<version>0.9.10-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>GWT Charts</name>
@@ -25,9 +25,9 @@
 	</licenses>
 
 	<scm>
-		<url>http://gwt-charts.googlecode.com/svn/tags/gwt-charts-0.9.9</url>
-		<connection>scm:svn:http://gwt-charts.googlecode.com/svn/tags/gwt-charts-0.9.9</connection>
-		<developerConnection>scm:svn:https://gwt-charts.googlecode.com/svn/tags/gwt-charts-0.9.9</developerConnection>
+		<url>http://gwt-charts.googlecode.com/svn/trunk/gwt-charts</url>
+		<connection>scm:svn:http://gwt-charts.googlecode.com/svn/trunk/gwt-charts</connection>
+		<developerConnection>scm:svn:https://gwt-charts.googlecode.com/svn/trunk/gwt-charts</developerConnection>
 	</scm>
 
 	<developers>
