--- a/gwt-charts-showcase/pom.xml
+++ b/gwt-charts-showcase/pom.xml
@@ -41,7 +41,7 @@
 		<dependency>
 			<groupId>com.googlecode.gwt-charts</groupId>
 			<artifactId>gwt-charts</artifactId>
-			<version>0.9.10-SNAPSHOT</version>
+			<version>0.9.10</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
