--- a/gwt-charts-showcase/.settings/com.google.gdt.eclipse.core.prefs
+++ b/gwt-charts-showcase/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,5 +1,5 @@
-#Fri Apr 06 22:50:55 BST 2012
 eclipse.preferences.version=1
 jarsExcludedFromWebInfLib=
+launchConfigExternalUrlPrefix=
 warSrcDir=war
 warSrcDirIsOutput=true
